[package]
name = "rust-less"
version = "0.1.0"
edition = "2021"
description = "A LESS to CSS parser and converter library written in Rust"
license = "MIT"
authors = ["Yang Cheng"]
readme = "README.md"
repository = "https://github.com/YangChengxxyy/rust-less"
keywords = ["less", "css", "parser"]
categories = ["parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_less"
path = "src/lib.rs"

[[bin]]
name = "rust-less"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = []
cli = []

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
